добавлен файл конфигурации

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Modul11Final/appsettings.json
+/Modul11Final/appsettings.json
+/Modul11Final/appsettings.json
